8265116: ZGC: Steal local stacks instead of flushing them