src/hotspot/share/gc/z/zMarkStack.hpp
@@ -139,6 +139,9 @@ public:
                ZMarkStripe* stripe,
                ZMarkStack* stack);
 
+  ZMarkStack* steal(ZMarkStripeSet* stripes,
+                    ZMarkStripe* stripe);
+
   bool push(ZMarkStackAllocator* allocator,
             ZMarkStripeSet* stripes,
             ZMarkStripe* stripe,
